# voxel_game

./: Cargo.toml  README.md  build.rs
resources/shaders/: falling_fragment.glsl  falling_vertex.glsl  flat_fragment.glsl  flat_vertex.glsl  fragment.glsl  sky_fragment.glsl  sky_vertex.glsl  vertex.glsl  voxel_fragment.glsl  voxel_vertex.glsl
src/: game_state.rs  interface.rs  main.rs  utils.rs  voxel_engine.rs
src/graphics/: average_max_height.rs  debug_display.rs  falling_shader.rs  flat_shader.rs  game_menu.rs  height_map.rs  max_height.rs  mesh_generator.rs  mesh_manager.rs  mesh_transformer.rs  mod.rs  rain_system.rs  renderer.rs  screen_effects.rs  shader_manager.rs  sky.rs  sky_shader.rs  texture_manager.rs  ui_display.rs  voxel_particle_system.rs  voxel_shader.rs  world_map.rs
src/interface/: background.rs  button.rs  error_display.rs  game_menu.rs  help_menu.rs  interface_context.rs  list_input.rs  mod.rs  settings_menu.rs  style.rs  text.rs  text_input.rs  title_screen.rs  tutorial_messages.rs  util.rs  world_selection.rs
src/interface/game_menu/: crafting_menu.rs  game_menu.rs  game_menu_context.rs  mod.rs  voxel_selection_menu.rs
src/model/: area.rs  inventory.rs  location.rs  mod.rs  player_info.rs  user_settings.rs  voxel.rs  world.rs
src/service/: active_zone.rs  activity_timer.rs  area_generation.rs  asset_manager.rs  camera_controller.rs  crafting.rs  input.rs  mod.rs  persistence.rs  raycast.rs  render_zone.rs  sound_manager.rs  voxel_physics.rs  world_actions.rs  world_time.rs
src/service/area_generation/: algorithms.rs  biome_type.rs  (+8 more)
(+23 files in other folders)
