[package]
name = "voxel_game"
version = "1.7.0"
edition = "2024"
build = "build.rs"

[dependencies]
bincode = "2.0.1"
libnoise = "1.1.2"
lz4_flex = { version = "0.11.5", default-features = false }
macroquad = { version = "0.4.14", features = ["audio"] }
rayon = "1.10.0"
tobj = "4.0.3"

[[bin]]
name = "VoxelWorld"
path = "src/main.rs"

[build-dependencies]
png = "0.18"
winres = "0.1"
